--- a/source/VotingApp/VotingApp/Views/Shared/_Layout.cshtml
+++ b/source/VotingApp/VotingApp/Views/Shared/_Layout.cshtml
@@ -63,6 +63,9 @@
     $("#datetime").datetimepicker({
         format: 'yyyy-mm-dd hh:ii'
     });
+    $("#VoteOpenDateTime").datetimepicker({
+        format: 'yyyy-mm-dd hh:ii'
+    });
 </script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
