--- a/source/VotingApp/VotingApp/Views/Create/Confirmation.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/Confirmation.cshtml
@@ -32,17 +32,22 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row mb-4 justify-content-center">
-                        <h3>Share Vote:</h3>
-                        <div class="card col-md-6 mx-auto">
-                            <div class="card-body">
-                                <h3 class="text-black">Vote Access Code:</h3>
-                                <p class="card-text text-black">@Model.VoteAccessCode</p>
-                                <h3 class="text-black">Vote Access Link:</h3>
-                                <p class="card-text text-black">@Model.ShareURL</p>
+
+                    @if (Model.VoteAccessCode != null)
+                    {
+                        <div class="row mb-4 justify-content-center">
+                            <h3>Share Vote:</h3>
+                            <div class="card col-md-6 mx-auto">
+                                <div class="card-body">
+                                    <h3 class="text-black">Vote Access Code:</h3>
+                                    <p class="card-text text-black">@Model.VoteAccessCode</p>
+                                    <h3 class="text-black">Vote Access Link:</h3>
+                                    <p class="card-text text-black">@Model.ShareURL</p>
+                                </div>
                             </div>
-                        </div>
-                    </div>
+                        </div> 
+                    }
+
                     <div class="row mb-4 justify-content-center">
                         <h3>Vote Description:</h3>
                         <h6>(If you would like to change your description press the edit button)</h6>
@@ -53,6 +58,17 @@
                         </div>
                     </div>
                 </form>
+                @if (Model.VoteOpenDateTime != null)
+                {
+                    <div class="row mb-4 justify-content-center">
+                        <h3>Voting Begins At:</h3>
+                        <div class="card col-md-6 mx-auto">
+                            <div class="card-body">
+                                <p class="card-text text-black">@Html.Raw($"{Model.VoteOpenDateTime.Value.Month}/{Model.VoteOpenDateTime.Value.Day}/{Model.VoteOpenDateTime.Value.Year} { Model.VoteOpenDateTime.Value.TimeOfDay.ToString("hh\\:mm")}")</p>
+                            </div>
+                        </div>
+                    </div>
+                }
                 <div class="row mb-4 justify-content-center">
                     <h3>Voting Closes At:</h3>
                     <div class="card col-md-6 mx-auto">
