--- a/source/VotingApp/VotingApp/Views/Shared/_Layout.cshtml
+++ b/source/VotingApp/VotingApp/Views/Shared/_Layout.cshtml
@@ -64,6 +64,9 @@
     $("#datetime").datetimepicker({
         format: 'yyyy-mm-dd hh:ii'
     });
+    $("#VoteCloseDateTime").datetimepicker({
+        format: 'yyyy-mm-dd hh:ii'
+    });
     $("#VoteOpenDateTime").datetimepicker({
         format: 'yyyy-mm-dd hh:ii'
     });
