--- a/source/VotingApp/VotingApp/Views/Create/AddVoteUsers.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/AddVoteUsers.cshtml
@@ -16,8 +16,8 @@
     <div class="container text-center text-white">
         <h1 class="display-4">Authorized Users</h1>
         <hr class="mb-4"/>
-        <p>Enter in the emails for any users you want to allow to submit votes for this given vote.</p> 
-        <p>Leave emtpy if you want a public vote.</p>
+        <p>Enter in the emails for any users you want to allow to submit votes for this given vote.</p>
+        <p>To enter multiple emails seperate each emails by comma ex.(example@email.com,example2@email.com)</p>
         <form asp-action="GetUsers" method="post">
             @if (Model != null)
                 {
