--- a/source/VotingApp/VotingApp/Views/Access/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/Index.cshtml
@@ -14,23 +14,35 @@
                                                          right: 50%;
                                                          width: 100vw;">
     <div class="text-center pt-5">
-        <h2 class="display-4 text-white">Enter Vote Code</h2>
+        <h2 class="display-4 text-white">Access A Vote</h2>
         <hr class="mb-2"/>
     </div>
-    <div class="col-sm-2 offset-sm-5  text-center">
-        @if (ViewBag.ErrorMessage != null)
-        {
-            <div class="alert alert-danger">
-                <p>@ViewBag.ErrorMessage</p>
-            </div>
-        }
-    </div>
-<form asp-action="Access" method="get" class="col-lg-6 offset-lg-3 ">
-    <div class="row justify-content-center text-center">
-        <input class="form-control mb-3" type="text" name="code" required minlength="6" maxlength="6"/>
-        <span class="input-group-btn">
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </span>
-    </div>
-</form>
+	<div class="col-sm-2 offset-sm-5  text-center">
+		@if (ViewBag.ErrorMessage != null)
+		{
+			<div class="alert alert-danger">
+				<p>@ViewBag.ErrorMessage</p>
+			</div>
+		}
+	</div>
+	<div class="row justify-content-center text-center">
+		<div class="col-lg-4">
+			<form asp-action="Access" method="get">
+				<h5 class="text-center text-white">Submit A Vote <span data-toggle="tooltip" data-placement="bottom" title="If the vote is private only authorized users will be able to submit a vote.">&#8505;</span></h5>
+				<input id="submit-input" placeholder="Enter access code here" class="form-control mb-3" type="text" name="code" required minlength="6" maxlength="6"/>
+					<span class="input-group-btn">
+						<button type="submit" id="vote-submit" class="btn btn-primary">Submit</button>
+					</span>
+			</form>
+		</div>
+		<div class="col-lg-4">
+			<form asp-action="Results" method="get">
+				<h5 class="text-center text-white">Vote Results <span data-toggle="tooltip" data-placement="bottom" title="If the vote is private only authorized users will be able to access the vote results.">&#8505;</span></h5>
+				<input id="results-input" placeholder="Enter access code here" class="form-control mb-3" type="text" name="code" required minlength="6" maxlength="6"/>
+				<span class="input-group-btn">
+					<button type="submit" id="results-submit" class="btn btn-primary">Submit</button>
+				</span>
+			</form>
+		</div>
+	</div>
 </div>
