--- a/source/VotingApp/VotingApp/Views/Create/Confirmation.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/Confirmation.cshtml
@@ -110,6 +110,9 @@
                             </div>
                         </div>
                     }
+                
+                    <audio controls src="@Url.Action("LoadAudio", new { id = Model.ID })") />
+                
                     
             </div>
         </div>
