--- a/source/VotingApp/VotingApp/Views/Create/CreatedVotesReview.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/CreatedVotesReview.cshtml
@@ -77,6 +77,22 @@
                             <form asp-action="VoteAnalyticsButton" method="post">
                                 <button type="submit" style="width:140px !important" class="btn btn-light bg-success btn-outline-primary" name="id" value="@createdVote.Id">Analytics</button>
                             </form>
+                            <button type="button" style="width:140px" class="btn btn-light bg-success btn-outline-primary" data-toggle="modal" data-target="@Html.Raw("#modal" +createdVote.Id)">
+                               Audio
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="@Html.Raw("modal" + createdVote.Id)" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-body">
+                                            <div class="row justify-content-center"><audio controls src="@Url.Action("LoadAudio", "Create", new { id = createdVote.Id })"></audio>
+                                                <button style="max-width: 300px;" type="button" class="btn btn-secondary mt-2" data-dismiss="modal">Close</button></div>
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             </td>
                         </tr>
                         {
