--- a/source/VotingApp/VotingApp/Views/Create/Confirmation.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/Confirmation.cshtml
@@ -66,7 +66,7 @@
                                 <h3 class="text-black">Vote Access Code:</h3>
                                 <p class="card-text text-black">@Model.VoteAccessCode</p>
                             }
-                            <h3 class="text-black">Vote Access Link: <button><i onclick="copyAccessCode()" class="fa-solid fa-copy fa-2xs"></i></button></h3>
+                            <h3 class="text-black">Vote Access Link: <button class="btn btn-light"><i onclick="copyAccessCode()" class="fa-solid fa-copy fa-2xs"></i></button></h3>
                             <p id="accessLink" class="card-text text-black">@Model.ShareURL</p>
                         </div>
                     </div>
