--- a/source/VotingApp/VotingApp/Views/Create/CreatedVotesReview.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/CreatedVotesReview.cshtml
@@ -99,7 +99,7 @@
 									    <div class="modal-dialog" role="document">
 										    <div class="modal-content">
 											    <div class="modal-body">
-												    <div class="row justify-content-center"><audio controls src="@Url.Action("LoadAudio", "Create", new { id = createdVote.Id })"></audio>
+												    <div class="row justify-content-center"><audio id="VoteAudio" controls src="@Url.Action("LoadAudio", "Create", new { id = createdVote.Id })"></audio>
 													    <button style="max-width: 300px;" type="button" class="btn btn-secondary mt-2" data-dismiss="modal">Close</button></div>
                                             
 											    </div>
