fixes anon and private buttons on create vote page

--- a/source/VotingApp/VotingApp/Views/Create/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/Index.cshtml
@@ -136,13 +136,13 @@
 								<div class="form-row mb-4">
 									<div class="row p-2">
 										<div class="custom-control custom-checkbox text-center">
-											<input asp-for="AnonymousVote" type="radio" value="true" id="flexCheckDefault"/>
+											<input asp-for="AnonymousVote" type="checkbox" value="true" id="flexCheckDefault"/>
 											<label class="control-label" for="flexCheckDefault">Is this vote anonymous? <span data-toggle="tooltip" data-placement="bottom" title="Check this anonymous button if you just want the overall results of the vote where individual user votes will be kept anonymous.">&#8505;</span></label>
 										</div>
 									</div>
 									<div class="row p-2">
 										<div class="custom-control custom-checkbox text-center" >
-											<input asp-for="PrivateVote" type="radio" value="true" id="privatecheck"/>
+											<input asp-for="PrivateVote" type="checkbox" value="true" id="privatecheck"/>
 											<label class="control-label" for="privatecheck">Is this a private vote? <span data-toggle="tooltip" data-placement="bottom" title="Check this if you want to specify who can cast a vote for this given vote.">&#8505;</span></label>
 										</div>
 									</div>
