--- a/source/VotingApp/VotingApp/Views/Create/MultipleChoice.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/MultipleChoice.cshtml
@@ -57,7 +57,7 @@
 						<div class="input-group">
 							<textarea name="option" class="form-control" type="text" rows="1" required></textarea>
 						
-							<div class="input-group-append">
+							<div class="input-group-append p-3">
 								@if (Model.VoteOptions.Count() > 9)
 								{
 									<button class="btn btn-light bg-success btn-outline-primary disabled">Add voting option</button>
