--- a/source/VotingApp/VotingApp/Views/Shared/_Layout.cshtml
+++ b/source/VotingApp/VotingApp/Views/Shared/_Layout.cshtml
@@ -65,12 +65,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script>
     $("#datetime").datetimepicker({
+        startDate: 'now()',
         format: 'yyyy-mm-dd hh:ii'
     });
     $("#VoteCloseDateTime").datetimepicker({
+        startDate: 'now()',
         format: 'yyyy-mm-dd hh:ii'
     });
     $("#VoteOpenDateTime").datetimepicker({
+        startDate: 'now()',
         format: 'yyyy-mm-dd hh:ii'
     });
 </script>
